fix(log): handle non-numeric folder names and empty logs
- Improve folder name handling in LogViewer by checking for non-numeric characters
- Optimize log file parsing to handle empty log entries
- Refactor log sorting to prevent errors with empty log arrays

--- a/src/thinkphp/view/index.html
+++ b/src/thinkphp/view/index.html
@@ -195,9 +195,10 @@
                 let _data = obj.data
                 if (_data.id < 1) return
                 let folder = $(obj.elem).parents('.layui-tree-spread').find('.layui-tree-txt:eq(0)').text()
+                if (isNaN(folder)) folder = '';
                 $('.layui-tree-entry').removeClass('layui-tree-entry-this')
                 $(obj.elem).find('.layui-tree-entry').addClass('layui-tree-entry-this')
-                let logPath = folder + '/' + (_data.title)
+                let logPath = (folder != '' ? folder + '/' : '') + (_data.title)
                 let file_path = logFolder + logPath
                 let localInfo = layui.sessionData(randomStr);
                 let localData = localInfo[module + '/' + logPath] || '';
