--- a/src/thinkphp/view/layout.html
+++ b/src/thinkphp/view/layout.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>ThinkPHP 日志查看器</title>
+    <title>{$config.title|default='ThinkPHP 日志查看器'}</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//unpkg.com/layui/dist/css/layui.css" rel="stylesheet">
-    <script src="//unpkg.com/layui/dist/layui.js"></script>
+    <link href="{$config.layui_css_path|default='//unpkg.com/layui/dist/css/layui.css'}" rel="stylesheet">
+    <script src="{$config.layui_js_path|default='//unpkg.com/layui/dist/layui.js'}"></script>
 </head>
 <body>
 
