--- a/src/thinkphp/view/index.html
+++ b/src/thinkphp/view/index.html
@@ -163,7 +163,7 @@
     </div>
 
     <div class="layui-side layui-side-menu layui-bg-black">
-        <div class="layui-logo layui-bg-black" lay-on="reloaPage">ThinkPHP 日志查看器</div>
+        <div class="layui-logo layui-bg-black" lay-on="reloaPage">{$config.title|default='ThinkPHP 日志查看器'}</div>
         <div class="layui-form log-module-select layui-hide-xs">
             <select lay-filter="module">
                 <option value="log">默认【log】日志</option>
