fix(logviewer): optimize Laravel log file handling and cache random string
- Update Laravel log file name format to 'laravel-{date}.log'
- Remove unnecessary leading slash from log file path- Cache random string using Laravel's Cache facade for better performance
- Refactor LogViewer class to remove redundant code and improve logic
- Update front-end to reflect changes in log file naming and path handling

Signed-off-by: wolfcode <37436228+wolf-leo@users.noreply.github.com>

--- a/src/thinkphp/view/index.html
+++ b/src/thinkphp/view/index.html
@@ -164,7 +164,7 @@
 
     <div class="layui-side layui-side-menu layui-bg-black">
         <div class="layui-logo layui-bg-black" lay-on="reloaPage">{$config.title|default='ThinkPHP 日志查看器'}</div>
-        <div class="layui-form log-module-select layui-hide-xs">
+        <div class="layui-form log-module-select">
             <select lay-filter="module">
                 <option value="log">默认【log】日志</option>
                 {volist name='modules' id='vo'}
