--- a/src/thinkphp/view/layout.html
+++ b/src/thinkphp/view/layout.html
@@ -8,6 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{$config.layui_css_path|default='//unpkg.com/layui/dist/css/layui.css'}" rel="stylesheet">
     <script src="{$config.layui_js_path|default='//unpkg.com/layui/dist/layui.js'}"></script>
+    {notempty name="config.customize.css"}
+    <link href="{$config.customize.css}" rel="stylesheet">
+    {/notempty}
+    {notempty name="config.customize.js"}
+    <script src="{$config.customize.js}"></script>
+    {/notempty}
+
 </head>
 <body>
 
