refactor(view): uncomment log click handling code
- Restore commented-out code in log click event handler
- This change enables folder path processing in the log system

Signed-off-by: wolfcode <wolfcode@88.com>

--- a/src/thinkphp/view/index.html
+++ b/src/thinkphp/view/index.html
@@ -236,7 +236,7 @@
             },
             logClick: function () {
                 let folder = $(this).parents('.layui-nav-itemed').find('a:eq(0)').text()
-                if (isNaN(folder)) folder = '';
+                // if (isNaN(folder)) folder = '';
                 let logPath = (folder != '' ? folder + '/' : '') + ($(this).text())
                 let file_path = logFolder + logPath
                 let localInfo = layui.sessionData(randomStr);
